# WaterSurfaceWavelets-Unity

./: CMakeLists.txt  LICENSE  README.md  README.org  package.json
Assets/: SphereTestScene.unity
Assets/Materials/: BakeVolume.mat  waterSurfacePBR.mat
Assets/Prefabs/: WaterSurface.prefab
Editor/: WaterWaveSurface.Editor.asmdef
Editor/Scripts/: WaterSurfaceEditor.cs
Runtime/: AssemblyInfo.cs
Runtime/Scripts/: IWaveGrid.cs  Settings.cs  WaterSurface.cs
Runtime/Scripts/CPU/: API.cs
Runtime/Scripts/Demo/: CameraMovement.cs  Disturbance.cs  Paddle.cs  Performance.cs
Runtime/Shaders/: Depth.shader  waterSurface.cginc
UnityPackage/: README.md  package.json
UnityPackage/Assets/: DepthRT.renderTexture
UnityPackage/Assets/Materials/: Depth.mat  WaterSurfaceMaterial.mat  WaterSurfaceMaterialCPU.mat  WaterSurfaceMaterialGPU.mat  environment.mat  waterSurface.mat  waterSurfacePBR.mat
UnityPackage/Assets/Prefabs/: WaterSurface.prefab
UnityPackage/Editor/Scripts/: TerrainBakerEditor.cs  WaterSurfaceEditor.cs
UnityPackage/Runtime/: WaterWaveSurface.asmdef
UnityPackage/Scripts/: API.cs  TerrainBaker.cs  WaterSurface.cs  WaterSurfaceMesh.cs  WaterSurfaceMeshData.cs  WaterSurfaceMeshRenderer.cs  WaveGrid.cs
UnityPackage/Shaders/: DebugWireframe.shader  bakeVolume.shader  waterSurface.cginc  waterSurface.shader
src/: CMakeLists.txt  Enviroment.cpp  Enviroment.h  Global.h  Grid.cpp  ProfileBuffer.cpp  ProfileBuffer.h  WaveGrid.cpp  WaveGrid.h
src/api/: API.cpp  CMakeLists.txt
src/math/: Integration.h
src/visualization/: Demo.cpp
(+53 files in other folders)
